apollo-federation/tests/snapshots/main__contract__include_filter_keeps_only_tagged_elements.snap
---
source: apollo-federation/tests/contract.rs
expression: api_schema(&supergraph)
---
type Query {
  public: Product!
}

type Product {
  id: ID!
  name: String!
}
