apollo-federation/tests/snapshots/main__contract__links_tag_and_inaccessible_specs_when_absent.snap
---
source: apollo-federation/tests/contract.rs
expression: schema_definition
---
schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/join/v0.3", for: EXECUTION) @link(url: "https://specs.apollo.dev/tag/v0.3") @link(url: "https://specs.apollo.dev/inaccessible/v0.2", for: SECURITY) {
  query: Query
